Improved code templetes and added to .gitignore

--- a/src/linear gui.ipynb
+++ b/src/linear gui.ipynb
@@ -420,7 +420,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": null,
    "id": "f4688d2f-0f5f-4698-bf95-05d196407f6e",
    "metadata": {},
    "outputs": [],
@@ -437,7 +437,7 @@
     "    Returns:\n",
     "        str: The content of the template file.\n",
     "    \"\"\"\n",
-    "    template_path = os.path.join(TEMPLATE_DIR, f\"{template_name}.php\")\n",
+    "    template_path = os.path.join(TEMPLATE_DIR, f\"{template_name}.py\")\n",
     "    \n",
     "    if os.path.exists(template_path):\n",
     "        with open(template_path, \"r\") as file:\n",
