fixed create_react_agent bug

--- a/src/linear gui.ipynb
+++ b/src/linear gui.ipynb
@@ -204,7 +204,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "id": "6f13b1d8",
    "metadata": {},
    "outputs": [],
@@ -249,7 +249,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": null,
    "id": "3d6a72cb-0731-4826-ba75-1fe722bcb718",
    "metadata": {},
    "outputs": [],
@@ -276,7 +276,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": null,
    "id": "790197ac-d540-47df-84a9-d11fe6cfcd52",
    "metadata": {},
    "outputs": [],
@@ -343,7 +343,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": null,
    "id": "10aba548-36f9-4478-b4ae-976b6b1ac538",
    "metadata": {},
    "outputs": [],
@@ -472,7 +472,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": null,
    "id": "f763fae2-f27a-42ee-83e9-ce91defdb831",
    "metadata": {},
    "outputs": [],
@@ -516,7 +516,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": null,
    "id": "c90e445d-1618-478c-87b6-b8a5a5c37386",
    "metadata": {},
    "outputs": [],
@@ -590,7 +590,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": null,
    "id": "68bf0416-3b65-4f14-a804-00b2f72564cf",
    "metadata": {},
    "outputs": [],
@@ -637,7 +637,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": null,
    "id": "56294b9e-987e-4d8a-bf08-0ac2ea7a6e06",
    "metadata": {},
    "outputs": [],
@@ -649,7 +649,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": null,
    "id": "11f1a14c-d6d7-4e6f-ac59-5b8147231dcd",
    "metadata": {},
    "outputs": [],
@@ -671,13 +671,27 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "ce2e45c7-3970-45ae-92ba-1dae30796de5",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def agent_builder(llm,tools,system_prompt):\n",
+    "    llm_with_system = llm.bind(system=system_prompt)\n",
+    "    agent = create_react_agent(\n",
+    "        llm_with_system,\n",
+    "        tools\n",
+    "    )\n",
+    "    return agent"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
    "id": "8fee87a1-0e50-4310-8afb-ffc47ff2485d",
    "metadata": {},
    "outputs": [],
    "source": [
-    "reconnaissance_agent = create_react_agent(\n",
-    "#    llm, tools=[prompt_user, cve_database, tooling_database], state_modifier=(\n",
-    "    llm, tools=[prompt_user, cve_database], state_modifier=(\n",
+    "reconnaissance_agent = agent_builder(llm, tools=[prompt_user, cve_database], system_prompt=(\n",
     "        \"You are a reconnaissance expert\"\n",
     "        \"Help the operator gather information about the target to find potential exploits\"\n",
     "        \"When suggesting reconnaissance methods, always consult the tooling_database to recommend specific commands, tools, and techniques appropriate for the target environment. \"\n",
@@ -685,17 +699,6 @@
     "        \"clearly indicating what additional information is needed to confirm exploitability\"\n",
     "        \"Once you are done with your initial task, or the user asks for something other \"\n",
     "        \"than reconnaissance, go to reconnaissance_handler\"\n",
-    "\n",
-    "            # llm, tools=[prompt_user, capec_database], state_modifier=(\n",
-    "    #     #this is the CAPEC test\n",
-    "    #     \"You are a reconnaissance expert\"\n",
-    "    #     \"Help the operator gather information about the target to find potential exploits\"\n",
-    "    #     \"When suggesting reconnaissance methods, always consult the tooling_database to recommend specific commands, tools, and techniques appropriate for the target environment\"\n",
-    "    #     \"When analyzing discovered services or vulnerabilities, reference the CAPEC database to identify potential attack patterns\"\n",
-    "    #     \"Clearly indicate what additional information is needed to confirm exploitability\"\n",
-    "    #     \"By the end of this interaction, identify the most promising exploit based on gathered information\"\n",
-    "    #     \"Once you are done with your initial task, or the user asks for something other than reconnaissance, go to reconnaissance_handler\"\n",
-    "    \n",
     "    )\n",
     ")\n",
     "\n",
@@ -758,8 +761,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "exploitation_agent = create_react_agent(\n",
-    "    llm, tools=[prompt_user, cve_database, tooling_database, exploit_code, exploitation_info], state_modifier=(\n",
+    "exploitation_agent = agent_builder(llm, tools=[prompt_user, cve_database], system_prompt=(\n",
     "        # \"you are an exploitation specialist for a CTF cyber operation.\"\n",
     "        # \"Give specific information and steps in order to exploit a given potential vulnerability.\"\n",
     "\n",
@@ -831,8 +833,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "pivoting_agent = create_react_agent(\n",
-    "    llm, tools=[prompt_user, pivot_database], state_modifier=(\n",
+    "pivoting_agent = agent_builder(llm, tools=[prompt_user, cve_database], system_prompt=(\n",
     "         \"You are a network pivoting specialist for a CTF cyber operation. \"\n",
     "        \"When approached with a request, FIRST query the pivot_database tool using relevant keywords. \"\n",
     "        \"If tools are found in the database, prioritize these recommendations and include their exact \"\n",
@@ -896,13 +897,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": null,
    "id": "8f0d830a-5ceb-4bc6-8d03-dc3351cb91e4",
    "metadata": {},
    "outputs": [],
    "source": [
-    "pivoting_agent = create_react_agent(\n",
-    "    llm, tools=[prompt_user, pivot_database], state_modifier=(\n",
+    "pivoting_agent = agent_builder(llm, tools=[prompt_user, cve_database], system_prompt=(\n",
     "        \"you are an pivoting specialist for a CTF cyber operation.\"\n",
     "        \"Give specific information and steps in order to pivot and move laterally in a network.\"\n",
     "    )\n",
@@ -947,7 +947,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": null,
    "id": "9f1ac37f-b98c-41e9-83af-c8d2d67a20f7",
    "metadata": {},
    "outputs": [],
@@ -971,16 +971,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
-   "id": "87037d2d-5aac-4277-86ce-3a7588b4300f",
-   "metadata": {
-    "scrolled": true
-   },
+   "execution_count": null,
+   "id": "b1731e98-fc46-49c7-ac56-b24bb970c557",
+   "metadata": {},
    "outputs": [],
    "source": [
-    "from IPython.display import display, Image\n",
-    "\n",
+    "from IPython.display import Image, display\n",
     "#display(Image(graph.get_graph().draw_mermaid_png()))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "2e266a3c-bc55-4288-bafb-4f2b06262d7f",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import pprint\n",
+    "# pprint.pprint(graph.get_graph().to_json())"
    ]
   },
   {
@@ -990,100 +998,7 @@
    "metadata": {
     "scrolled": true
    },
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "\n",
-       "<style>\n",
-       ".widget-hbox.widget-input-area {\n",
-       "    display: flex !important;\n",
-       "    flex-direction: row !important;\n",
-       "    justify-content: space-between !important;\n",
-       "    width: 100% !important;\n",
-       "}\n",
-       "\n",
-       ".widget-hbox > .widget-text {\n",
-       "    flex: 0 0 85% !important;\n",
-       "    width: 85% !important;\n",
-       "    max-width: 85% !important;\n",
-       "}\n",
-       "\n",
-       ".widget-hbox > .widget-button {\n",
-       "    flex: 0 0 14% !important;\n",
-       "    width: 14% !important;\n",
-       "    max-width: 14% !important;\n",
-       "}\n",
-       "\n",
-       ".widget-text input {\n",
-       "    width: 100% !important;\n",
-       "    box-sizing: border-box !important;\n",
-       "    height: 40px !important;\n",
-       "    padding: 8px 12px !important;\n",
-       "    border: 2px solid #c2c8d1 !important;\n",
-       "    border-radius: 8px !important;\n",
-       "    font-size: 15px !important;\n",
-       "    background-color: white !important;\n",
-       "}\n",
-       "\n",
-       ".jupyter-button {\n",
-       "    height: 40px !important;\n",
-       "    font-size: 14px !important;\n",
-       "    width: 100% !important;\n",
-       "}\n",
-       "\n",
-       ".clear-chat-button {\n",
-       "    margin-top: 10px !important;\n",
-       "    width: 100% !important;\n",
-       "}\n",
-       "</style>\n"
-      ],
-      "text/plain": [
-       "<IPython.core.display.HTML object>"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "data": {
-      "text/html": [
-       "<div class=\"chat-main-container\">"
-      ],
-      "text/plain": [
-       "<IPython.core.display.HTML object>"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "data": {
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "69083c2180c54aeaa7df2bfb7f4e495b",
-       "version_major": 2,
-       "version_minor": 0
-      },
-      "text/plain": [
-       "VBox(children=(HTML(value='<h2 class=\"app-title\" style=\"text-align: center; margin: 10px 0 20px; font-weight: …"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "data": {
-      "text/html": [
-       "</div>"
-      ],
-      "text/plain": [
-       "<IPython.core.display.HTML object>"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    }
-   ],
+   "outputs": [],
    "source": [
     "import ipywidgets as widgets\n",
     "from IPython.display import display, HTML, clear_output\n",
@@ -1376,7 +1291,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.12"
+   "version": "3.12.3"
   }
  },
  "nbformat": 4,
